wnfs-hamt/src/snapshots/wnfs_hamt__pointer__snapshot_tests__pointer.snap
---
source: wnfs-hamt/src/pointer.rs
expression: ptr
---
{
  "cid": "bafyr4icjrohmzg3axrk7guxd42zmfwhdx7ptio3n4lsg23hywjrmjgpmpa",
  "value": [
    [
      "James",
      4500
    ],
    [
      "Peter",
      2000
    ]
  ],
  "bytes": "goJlSmFtZXMZEZSCZVBldGVyGQfQ"
}
