wnfs-hamt/src/snapshots/wnfs_hamt__pointer__snapshot_tests__root_tree.snap
---
source: wnfs-hamt/src/pointer.rs
expression: ptr
---
{
  "value": [
    [
      "James",
      4500
    ],
    [
      "Peter",
      2000
    ]
  ],
  "cbor": "goJlSmFtZXMZEZSCZVBldGVyGQfQ"
}
